aws_bayada/modules/m-vpc/subnets_private.tf
resource "aws_subnet" "private" {

  count = "${var.subnet_map["private"]}"

  vpc_id     = "${aws_vpc.main.id}"
  cidr_block = "${cidrsubnet(var.cidr_block, var.newbits["private"], count.index + var.netnum_shift_map["private"])}"

  availability_zone       = "${element(data.aws_availability_zones.main.names, count.index % var.az_width)}"
  map_public_ip_on_launch = "false"

  tags {
    Name              = "subnet${var.tag_name}-${element(var.subnet_name_suffix, count.index)}-private"
	"bws:Description" = "Subnet IP range for private network"
    "bws:Service"     = "${var.tag_service}"
    "bws:Office"      = "${var.tag_office}"
    "bws:Environment" = "${var.tag_environment}"
    "bws:Customer"    = "${var.tag_customer}"
  }
}
